--- a/themes/my_theme/layouts/_default/single.html
+++ b/themes/my_theme/layouts/_default/single.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+== single ==
   <h1>{{ .Title }}</h1>
 
   {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
